syntax = "proto3";

package auth;

option go_package = "/auth";

import "google/protobuf/timestamp.proto";

message AuthRequest {
    string email = 1;
    string password = 2;
}

message User {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    bool active = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message AuthResponse {
	User user = 1;
}

service AuthService {
	rpc Auth(AuthRequest) returns (AuthResponse);
}
